--- a/auth_related/pom.xml
+++ b/auth_related/pom.xml
@@ -84,7 +84,10 @@
 			<artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson -->
 			<version>0.11.5</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-authorization-server</artifactId>
+		</dependency>
 
 	</dependencies>
 
