--- a/auth_related/src/main/resources/application.properties
+++ b/auth_related/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=auth_related
-server.port=8082
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/authrelated_bhs   
+spring.datasource.url=jdbc:mysql://localhost:3306/authrelated_bhs
 spring.datasource.username=root
 spring.datasource.password=MYSQL@bhs55
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
+
+server.port=9000
+logging.level.org.springframework.security=trace
